# dev-insights-tips-obsidian

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.localize/en/: index.md
.localize/en/development/cloud/: index.md
.localize/en/development/database/dynamodb/: index.md
.localize/en/development/database/mongodb/: pymongo.md
.localize/en/development/embedded/: index.md
.localize/en/development/programming/applescript/: example.md  index.md
.localize/en/development/programming/python/: dash-plotly.md  index.md
.localize/en/development/tools/design/: index.md
.localize/en/development/tools/document/: index.md
.localize/en/development/tools/shortcuts/: index.md
.obsidian/: workspace-mobile.json  workspace.json
.obsidian/plugins/obsidian-git/: data.json
ci/: run_mkdocs_cmd.py  set_pre-commit-hooks_exclude.py
dev-insights-tips-obsidian/.obsidian/: workspace.json
docs/: index.md
docs/en/development/cloud/aws/: index.md
docs/en/development/database/: index.md
docs/en/development/database/mariadb/: index.md
docs/en/development/database/mongodb/: index.md  install-mongodb.md  mongodb-compass.md  mongosh.md
docs/en/development/embedded/raspberrypi/: index.md  (+1 more)
docs/en/development/programming/: index.md
docs/ja/: index.md
docs/ja/development/: index.md
docs/ja/development/programming/: index.md
docs/ja/development/tools/: index.md
docs/stylesheets/: custom.css
overrides/: main.html
overrides/partials/: comments.html
(+61 files in other folders)
